--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v3.4.0
+
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
