--- a/.env
+++ b/.env
@@ -15,4 +15,4 @@ AUTH_EXPIRATION_AT=1h
 AUTH_SIGNING_KEY=SIGNING_KEY
 
 SHORTEN_DOMAIN_URL=localhost:8081
-SHORTEN_DEFAULT_URL=https://www.google.com
+SHORTEN_DEFAULT_URL=https://ya.ru
